--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,9 @@
 <!-- start custom footer snippets -->
-<!--<a href="/sitemap/">Sitemap</a>-->
+<script async src="//shenglongzhou.github.io//busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+<a href="/sitemap/">
+<span id="busuanzi_container_site_pv">
+    Visiting<span id="busuanzi_value_site_pv"></span>times
+</span>
+</a>
 <!-- end custom footer snippets -->
