--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,8 +53,8 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #29465b;
-$background-color           : #29465b;
+$body-color                 : #5e819d;
+$background-color           : #5e819d;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #eaeaea;
