--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -70,10 +70,10 @@ $info-color                 : #52adc8;
 /* brands */
 $behance-color              : #1769FF;
 $dribbble-color             : #ea4c89;
-$facebook-color             : #b0bec5;
+$facebook-color             : #eceff1;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #b0bec5;
+$github-color               : #eceff1;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
