--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,11 +53,11 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #546e7a;
-$background-color           : #546e7a;
+$body-color                 : #ffffff;
+$background-color           : #ffffff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #eaeaea;
+$text-color                 : #323232;
 $border-color               : mix(#fff, $background-color, 20%);
 
 
