--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,8 +53,8 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #ffffff;
-$background-color           : #ffffff;
+$body-color                 : #f2f3f3;
+$background-color           : #f2f3f3;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #323232;
