--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #f2f3f3;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #323232;
-$border-color               : mix(#fff, $background-color, 20%);
+$border-color               : mix(#fff, $text-color, 90%);
 
 
 $primary-color              : #8cd2d5;
@@ -73,7 +73,7 @@ $dribbble-color             : #ea4c89;
 $facebook-color             : #eceff1;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #eceff1;
+$github-color               : #dd4b39;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
