--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,15 +53,15 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #f2f3f3;
-$background-color           : #f2f3f3;
+$body-color                 : #feffef;
+$background-color           : #feffef;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #323232;
 $border-color               : mix(#fff, $text-color, 90%);
 
 
-$primary-color              : #8cd2d5;
+$primary-color              : #015697;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
