--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,8 +53,8 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #feffef;
-$background-color           : #feffef;
+$body-color                 : #ffffff;
+$background-color           : #ffffff;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #323232;
@@ -73,7 +73,7 @@ $dribbble-color             : #ea4c89;
 $facebook-color             : #eceff1;
 $flickr-color               : #ff0084;
 $foursquare-color           : #0072b1;
-$github-color               : #dd4b39;
+$github-color               : #323232;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
 $lastfm-color               : #d51007;
