--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -16,10 +16,10 @@ div.highlighter-rouge, figure.highlight {
     top: 0;
     right: 0;
     padding: 0.5em;
-    background-color: $lighter-gray;
+    background-color: #d9d9d9;
     content: "\f121";
     font-family: "fontawesome" !important;
-    font-size: $type-size-6;
+    font-size: $type-size-10;
     line-height: 1;
     text-transform: none;
     speak: none;
