--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -17,9 +17,9 @@ div.highlighter-rouge, figure.highlight {
     right: 0;
     padding: 0.5em;
     background-color: #d9d9d9;
-    content: "\f121";
+    /*content: "\f121"*/;
     font-family: "fontawesome" !important;
-    font-size: $type-size-10;
+    font-size: 16px;
     line-height: 1;
     text-transform: none;
     speak: none;
