--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -19,7 +19,7 @@ div.highlighter-rouge, figure.highlight {
     background-color: #d9d9d9;
     /*content: "\f121"*/;
     font-family: "fontawesome" !important;
-    font-size: 14px;
+    font-size: 0.8125em;
     line-height: 1;
     text-transform: none;
     speak: none;
