--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -8,7 +8,7 @@ div.highlighter-rouge, figure.highlight {
   padding: 1em;
   border: 1px solid $border-color;
   border-radius: $border-radius;
-  background-color: $code-background-color;
+  background-color: #d9d9d9; /*$code-background-color;*/
   box-shadow: $box-shadow;
 
   &:before {
@@ -19,7 +19,7 @@ div.highlighter-rouge, figure.highlight {
     background-color: #d9d9d9;
     /*content: "\f121"*/;
     font-family: "fontawesome" !important;
-    font-size: 0.8125em; 
+    font-size: 0.8em; 
     line-height: 1;
     text-transform: none;
     speak: none;
@@ -28,7 +28,7 @@ div.highlighter-rouge, figure.highlight {
   .highlight {
     margin: 0;
     font-family: $monospace;
-    font-size: 0.8125em;  
+    font-size: 0.8em;  
     line-height: 1.8;
   }
 }
