--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -52,10 +52,11 @@ $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
+$lightest-gray              : mix(#fff, $gray, 95%);
 
 $body-color                 : #ffffff;
 $background-color           : #ffffff;
-$code-background-color      : mix(#000, $background-color, 15%);
+$code-background-color      : mix(#000, $background-color, 5%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
 $text-color                 : #323232;
 $border-color               : mix(#fff, $text-color, 90%);
