--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -19,20 +19,20 @@ table {
 
 thead {
   background-color: $lighter-gray;
-  border-bottom: 1px solid $light-gray;
+  border-bottom: 1px solid $lighter-gray;
 }
 
 th {
   padding: 0.5em;
   font-weight: bold;
   text-align: left;
-  border-right: 1px solid $light-gray;
+  border-right: 1px solid $lighter-gray;
 }
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid $light-gray;
-  border-right: 1px solid $light-gray;
+  border-bottom: 1px solid $lighter-gray;
+  border-right: 1px solid $lighter-gray;
 }
 
 tr, td, th {
