--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -47,6 +47,8 @@ $type-size-8                : 0.625em;  // ~10px
    Colors
    ========================================================================== */
 
+$white                      : #ffffff;
+
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
