--- a/assets/css/collapse.css
+++ b/assets/css/collapse.css
@@ -14,3 +14,13 @@
 .container .content {
     display: none;
     padding : 5px;
+}
+.bottom-right-container {
+    position: relative; /* Or a parent element needs this */
+}
+.bottom-right-content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
