--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -325,3 +325,11 @@
 .fa.fa-pull-right {
   margin-left: .3em;
 }
+.bottom-right-container {
+    position: relative; /* Or a parent element needs this */
+}
+.bottom-right-content {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
